--- a/site/cambot/index.html
+++ b/site/cambot/index.html
@@ -449,19 +449,23 @@ You can do plenty of things from playing music to reviewing the economical statu
 <li><strong><em>lyrics</em></strong> (aliases = [ly]) --&gt; If you use this command while playing a song (example usage: <strong><em>.lyrics</em></strong>), it will show the lyrics of the current playing song. If you use it by giving song name and artist name (example usage: <strong><em>.lyrics blank space, taylor swift</em></strong>), CAMBOT will search for the given song and show the lyrics of it. You can also use it by just giving the name of the song. Just don't forget to use a comma after the song name (example usage: <strong><em>.lyrics blank space,</em></strong>). This command uses Genius.com API.</li>
 </ul>
 <h3 id="fun-commands">Fun Commands</h3>
-<p>If you are not Turkish, you probably won't understand these jokes about economics in Turkey. So don't mind.
-- <strong><em>kedi</em></strong> (no aliases) --&gt; Posts a random cat photo.
-- <strong><em>dolar</em></strong> (no aliases) --&gt; Shows the USD/TRY exchange rate.
-- <strong><em>euro</em></strong> (no aliases) --&gt; Shows the EUR/TRY exhange rate.
-- <strong><em>altın</em></strong> (no aliases --&gt; Shows the price of 1 gr gold in Turkish Lira.
-- <strong><em>akp</em></strong> (no aliases) --&gt; Shows the improvement of Turkey in the last 20 years XD.
-- <strong><em>2023</em></strong> (no aliases) --&gt; Shows Turkey's enormously extreme and gigantically big power in the year 2023.</p>
+<p>If you are not Turkish, you probably won't understand these jokes about economics in Turkey. So don't mind.</p>
+<ul>
+<li><strong><em>kedi</em></strong> (no aliases) --&gt; Posts a random cat photo.  </li>
+<li><strong><em>dolar</em></strong> (no aliases) --&gt; Shows the USD/TRY exchange rate.</li>
+<li><strong><em>euro</em></strong> (no aliases) --&gt; Shows the EUR/TRY exhange rate.</li>
+<li><strong><em>altın</em></strong> (no aliases --&gt; Shows the price of 1 gr gold in Turkish Lira.</li>
+<li><strong><em>akp</em></strong> (no aliases) --&gt; Shows the improvement of Turkey in the last 20 years XD.</li>
+<li><strong><em>2023</em></strong> (no aliases) --&gt; Shows Turkey's enormously extreme and gigantically big power in the year 2023.</li>
+</ul>
 <h3 id="personal-commands">Personal Commands</h3>
-<p>These are the commands that I use with my friends. There are some inside jokes with these commands so don't mind if you don't understand.
-- <strong><em>melihtürkçe</em></strong> (aliases = [mt]) --&gt; Plays the Melih Civan's special Turkish playlist.
-- <strong><em>semihtürkçe</em></strong> (aliases = [st]) --&gt; Plays the Semih Vicir's special Turkish playlist.
-- <strong><em>furkansavar</em></strong> (no aliases) --&gt; This command will only work if Furkan Toprak is online. Only use this command if you want to enrage Furkan Toprak.
-- <strong><em>tft</em></strong> (no aliases) --&gt; This command will call specific people to come to play Teamfight Tactics.</p>
+<p>These are the commands that I use with my friends. There are some inside jokes with these commands so don't mind if you don't understand.</p>
+<ul>
+<li><strong><em>melihtürkçe</em></strong> (aliases = [mt]) --&gt; Plays the Melih Civan's special Turkish playlist.</li>
+<li><strong><em>semihtürkçe</em></strong> (aliases = [st]) --&gt; Plays the Semih Vicir's special Turkish playlist.</li>
+<li><strong><em>furkansavar</em></strong> (no aliases) --&gt; This command will only work if Furkan Toprak is online. Only use this command if you want to enrage Furkan Toprak.</li>
+<li><strong><em>tft</em></strong> (no aliases) --&gt; This command will call specific people to come to play Teamfight Tactics.</li>
+</ul>
 <h2 id="contact">Contact</h2>
 <p>If you find any bugs or if you have any command requests, you can always contact me via <a href="https://twitter.com/C4MCI">my Twitter account</a>. Feel free to ask anything.</p>
 <h2 id="credits">Credits</h2>
